--- a/config/lio_config.yaml
+++ b/config/lio_config.yaml
@@ -37,3 +37,5 @@ fast_lio:
    filter_size_surf_z: 0.4
    filter_size_map: 0.4
    local_loop_win: [110, -116, 155, -170]
+   ivox_grid_resolution: 0.5
+   ivox_nearby_type: 18
