--- a/r2live/CMakeLists.txt
+++ b/r2live/CMakeLists.txt
@@ -79,12 +79,14 @@ add_executable(r2live
     src/initial/initial_ex_rotation.cpp
     src/fast_lio/include/kd_tree/ikd_Tree.cpp
     src/fast_lio/include/FOV_Checker/FOV_Checker.cpp 
-    src/fast_lio/IMU_Processing.cpp
+    
+    # src/fast_lio/IMU_Processing.cpp
 
     src/fast_lio/src/fast_lio.cc 
     src/fast_lio/src/lio_core.cc 
     src/fast_lio/src/pointcloud_map.cc 
     src/fast_lio/src/parameter_server.cc
+    src/fast_lio/src/imu_process.cc
     )
 
 target_link_libraries(r2live ${catkin_LIBRARIES} ${ALL_TARGET_LIBRARIES}) 
