--- a/config/lio_m2dgr_config.yaml
+++ b/config/lio_m2dgr_config.yaml
@@ -37,3 +37,7 @@ fast_lio:
    filter_size_surf_z: 0.4
    filter_size_map: 0.4
    local_loop_win: [110, -116, 155, -170]
+   
+   ivox_grid_resolution: 0.5        # default=0.2
+   ivox_nearby_type: 18             # 6, 18, 26
+   num_match_points: 5
