--- a/config/lio_m2dgr_config.yaml
+++ b/config/lio_m2dgr_config.yaml
@@ -41,3 +41,5 @@ fast_lio:
    ivox_grid_resolution: 0.5        # default=0.2
    ivox_nearby_type: 18             # 6, 18, 26
    num_match_points: 5
+
+   map_method: "ivox"            # ivox or ikd_tree
