--- a/config/lio_m2dgr_config.yaml
+++ b/config/lio_m2dgr_config.yaml
@@ -44,4 +44,4 @@ fast_lio:
    ivox_nearby_type: 18             # 6, 18, 26
    num_match_points: 5
 
-   map_method: "ivox"            # ivox or ikd_tree
+   map_method: "ikd_tree"            # ivox or ikd_tree
