--- a/config/lio_m2dgr_config.yaml
+++ b/config/lio_m2dgr_config.yaml
@@ -25,12 +25,12 @@ fast_lio:
    map_file_path: " "
    max_iteration: 4
    dense_map_enable: true
-   fov_degree: 360.0
-   cube_side_length: 1000000000
-   maximum_pt_kdtree_dis: 0.5
-   maximum_res_dis: 0.3
-   planar_check_dis: 0.10
-   m_long_rang_pt_dis: 500
+   fov_degree: 70.00
+   cube_side_length: 100.0
+   maximum_pt_kdtree_dis: 3.0
+   maximum_res_dis: 3.0
+   planar_check_dis: 0.05
+   m_long_rang_pt_dis: 50.0
    publish_feature_map: false
    filter_size_corner: 0.4
    filter_size_surf: 0.4
@@ -44,4 +44,6 @@ fast_lio:
    ivox_nearby_type: 18             # 6, 18, 26
    num_match_points: 5
 
-   map_method: "ikd_tree"            # ivox or ikd_tree
+   map_method: "ivox"            # ivox or ikd_tree
+   N_SCANS: 1800
+   max_init_count: 10
