--- a/r2live/CMakeLists.txt
+++ b/r2live/CMakeLists.txt
@@ -69,36 +69,34 @@ add_executable(voxel_map_node
 
 target_link_libraries(voxel_map_node ${catkin_LIBRARIES} ${ALL_TARGET_LIBRARIES})
 
-# add_executable(r2live
-#     src/estimator_node.cpp
-#     src/parameters.cpp
-#     src/estimator.cpp
-#     src/estimator_optimization.cpp
-#     src/feature_manager.cpp
-#     src/factor/pose_local_parameterization.cpp
-#     src/factor/projection_factor.cpp
-#     src/factor/projection_td_factor.cpp
-#     src/utility/utility.cpp
-#     src/utility/visualization.cpp
-#     src/utility/CameraPoseVisualization.cpp
-#     src/initial/solve_5pts.cpp
-#     src/initial/initial_aligment.cpp
-#     src/initial/initial_sfm.cpp
-#     src/initial/initial_ex_rotation.cpp
-#     src/fast_lio/include/kd_tree/ikd_Tree.cpp
-#     src/fast_lio/include/FOV_Checker/FOV_Checker.cpp 
+add_executable(r2live
+    src/estimator_node.cpp
+    src/parameters.cpp
+    src/estimator.cpp
+    src/estimator_optimization.cpp
+    src/feature_manager.cpp
+    src/factor/pose_local_parameterization.cpp
+    src/factor/projection_factor.cpp
+    src/factor/projection_td_factor.cpp
+    src/utility/utility.cpp
+    src/utility/visualization.cpp
+    src/utility/CameraPoseVisualization.cpp
+    src/initial/solve_5pts.cpp
+    src/initial/initial_aligment.cpp
+    src/initial/initial_sfm.cpp
+    src/initial/initial_ex_rotation.cpp
     
-#     # src/fast_lio/IMU_Processing.cpp
+    # src/fast_lio/IMU_Processing.cpp
 
-#     src/fast_lio/src/fast_lio.cc 
-#     src/fast_lio/src/lio_core.cc 
-#     src/fast_lio/src/pointcloud_map.cc 
-#     src/fast_lio/src/parameter_server.cc
-#     src/fast_lio/src/imu_process.cc
-#     src/fast_lio/src/voxel_map_util.cc
-#     )
+    src/fast_lio/src/imu_processing.cc
+    src/fast_lio/src/preprocess.cc
+    src/fast_lio/src/voxel_map_util.cc
+    src/fast_lio/src/voxel_mapping.cc
+    
+    src/fast_lio/src/parameter_server.cc
+    )
 
-# target_link_libraries(r2live ${catkin_LIBRARIES} ${ALL_TARGET_LIBRARIES}) 
+target_link_libraries(r2live ${catkin_LIBRARIES} ${ALL_TARGET_LIBRARIES}) 
 
 
 
